# QaGuruAdvancedPython

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
configs/: regres_configs.py
data/: data_for_app.py  data_for_tests.py  users.json
micro_service/: main.py
micro_service/database/: engine.py  users.py
micro_service/models/: User.py  service_models.py
micro_service/routers/: status.py  users.py
tests/: conftest.py  test_api.py  test_register.py
tests/api/: base_session.py  config.py
tests/api/client_api/: status_api.py  users_api.py
tests/fixtures/: data_fixtures.py  sessions_fixtures.py
