[project]
name = "qaguruadvancedpython"
version = "0.1.0"
description = ""
authors = [
    {name = "Максим Андреев",email = "mp.andreev@interfax.ru"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi (>=0.121,<0.122)",
    "starlette (>=0.49.1,<0.50.0)",
    "uvicorn (>=0.38,<0.40)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "fastapi-pagination (>=0.15,<0.17)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.30)",
    "poetry-core (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
